--- a/requirements/default.in
+++ b/requirements/default.in
@@ -18,9 +18,10 @@ html5lib==1.0b3 	# MIT
 isoweek==1.3.3		# BSD
 numpy==1.11.3 		# BSD
 paypalrestsdk==1.9.0    # Paypal SDK License
-psycopg2==2.6.2     # LGPL
+psycopg2                # LGPL
 pygeoip==0.3.2 		# LGPL
-python-cjson==1.1.0	# LGPL
+python-cjson; python_version <= "2.7"    # LGPL
+ujson; python_version > "2.7"            # BSD
 python-dateutil==2.6.1 	# BSD
 # There seems to be an issue(see: https://pagure.io/python-daemon/issue/18) with dependency installation on the
 # latest version of python-daemon(2.2.0), so we pin it to an earlier version.
@@ -36,6 +37,7 @@ user-agents==0.3.2	# MIT
 vertica-python==0.6.11  # MIT
 yarn-api-client==0.2.3  # BSD
 snowflake-connector-python==1.7.9
+futures; python_version == "2.7"
 
 -e git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi # Apache License 2.0
 
