Change default for now to python 3.6, for testing.
Use python3 for running mrrunner.py in cluster.

Also cast INT to STRING before UNION in Hive code.

Pass 'future' package to all remote nodes.

Fix creation of Vertica marker tables in Python 3.

Convert OrderTransactionRecord from bytes.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -10,6 +10,9 @@ task_failed = 30
 scheduling_error = 35
 unhandled_exception = 40
 
+[hadoop]
+python-executable = python3
+
 [hive]
 release = apache
 version = 1.0
