--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -8,6 +8,9 @@ task_failed = 30
 scheduling_error = 35
 unhandled_exception = 40
 
+[hadoop]
+python-executable = python3
+
 [hive]
 release = apache
 version = 1.0
