Load PayPal Chargeback report into Vertica

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,6 +85,7 @@ edx.analytics.tasks =
     orders = edx.analytics.tasks.warehouse.financial.orders_import:OrderTableTask
     payment_reconcile = edx.analytics.tasks.warehouse.financial.reconcile:ReconcileOrdersAndTransactionsTask
     paypal = edx.analytics.tasks.warehouse.financial.paypal:PaypalTransactionsByDayTask
+    paypal-report = edx.analytics.tasks.warehouse.financial.paypal_ftpreport:LoadPayPalCaseReportToVertica
     affiliate_window = edx.analytics.tasks.warehouse.financial.fees:LoadFeesToWarehouse
 
     # export:
