--- a/setup.cfg
+++ b/setup.cfg
@@ -108,6 +108,9 @@ edx.analytics.tasks =
     enterprise_enrollments = edx.analytics.tasks.enterprise.enterprise_enrollments:ImportEnterpriseEnrollmentsIntoMysql
     enterprise_user = edx.analytics.tasks.enterprise.enterprise_user:ImportEnterpriseUsersIntoMysql
 
+    # programs
+    program_reports = edx.analytics.tasks.programs.program_reports:BuildLearnerProgramReport
+
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
     local = luigi.contrib.hadoop:LocalJobRunner
