Aggregate programs report MapReduce task (#767)

--- a/setup.cfg
+++ b/setup.cfg
@@ -110,6 +110,7 @@ edx.analytics.tasks =
 
     # programs
     program_reports = edx.analytics.tasks.programs.program_reports:BuildLearnerProgramReportTask
+    course_enrollments = edx.analytics.tasks.programs.program_reports:CombineCourseEnrollments
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
