ENT-2664 added task for inserting course_structure to mysql

--- a/setup.cfg
+++ b/setup.cfg
@@ -106,8 +106,10 @@ edx.analytics.tasks =
     noop = edx.analytics.tasks.monitor.performance:ParseEventLogPerformanceTask
 
     # enterprise:
+    enterprise_engagements = edx.analytics.tasks.enterprise.enterprise_engagements:ImportEnterpriseEngagementsIntoMysql
     enterprise_enrollments = edx.analytics.tasks.enterprise.enterprise_enrollments:ImportEnterpriseEnrollmentsIntoMysql
     enterprise_user = edx.analytics.tasks.enterprise.enterprise_user:ImportEnterpriseUsersIntoMysql
+
 
     # programs
     program_reports = edx.analytics.tasks.programs.program_reports:BuildLearnerProgramReport
