--- a/requirements/test.in
+++ b/requirements/test.in
@@ -7,14 +7,13 @@
 
 # Stuff for tests
 
-coverage==4.3.1
+coverage==5.2
 ddt==1.1.1
 diff-cover >= 0.2.1
 freezegun==0.3.9
 httpretty==0.8.14
 mock==2.0.0
-nose-ignore-docstring==0.2
-nose==1.3.7
+pytest-cov
 pandas==0.13.0
 
 # Stuff for development
