--- a/requirements/test.in
+++ b/requirements/test.in
@@ -13,8 +13,7 @@ diff-cover >= 0.2.1
 freezegun==0.3.9
 httpretty==0.8.14
 mock==2.0.0
-nose-ignore-docstring==0.2
-nose==1.3.7
+pytest-cov
 pandas==0.13.0
 
 # Stuff for development
