--- a/requirements/default.in
+++ b/requirements/default.in
@@ -4,6 +4,7 @@
 -r base.txt
 
 argparse==1.2.1 	# Python Software Foundation License
+azure-storage-blob==2.1.0
 boto3==1.4.8            # Apache 2.0
 ciso8601==1.0.3         # MIT
 edx-ccx-keys==0.2.1     # AGPL
@@ -17,6 +18,7 @@ gspread==3.1.0    # MIT
 html5lib==1.0.1 	# MIT
 isoweek==1.3.3		# BSD
 numpy==1.16.5 		# BSD
+paramiko==2.6.0
 paypalrestsdk==1.9.0    # Paypal SDK License
 psycopg2==2.7.1     # LGPL
 pygeoip==0.3.2 		# LGPL
@@ -37,6 +39,6 @@ vertica-python==0.6.11  # MIT
 yarn-api-client==0.2.3  # BSD
 snowflake-connector-python==2.0.2
 
-git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi # Apache License 2.0
+-e git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi # Apache License 2.0
 
-git+https://github.com/edx/pyinstrument.git@a35ff76df4c3d5ff9a2876d859303e33d895e78f#egg=pyinstrument     # BSD
+-e git+https://github.com/edx/pyinstrument.git@a35ff76df4c3d5ff9a2876d859303e33d895e78f#egg=pyinstrument     # BSD
