--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,6 @@ edx.analytics.tasks =
     # common
     sqoop-import = edx.analytics.tasks.common.sqoop:SqoopImportFromMysql
     insert-into-table = edx.analytics.tasks.common.mysql_load:MysqlInsertTask
-    bigquery-load = edx.analytics.tasks.common.bigquery_load:BigQueryLoadTask
     snowflake-load = edx.analytics.tasks.common.snowflake_load:SnowflakeLoadTask
 
     # insights
@@ -57,6 +56,7 @@ edx.analytics.tasks =
     # warehouse:
     load-google-sheet-snowflake = edx.analytics.tasks.warehouse.load_google_sheet_to_warehouse:LoadGoogleSpreadsheetsToSnowflakeWorkflow
     load-course-catalog = edx.analytics.tasks.warehouse.load_internal_reporting_course_catalog:PullDiscoveryCoursesAPIData
+    load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlDatabaseFromS3ToVerticaSchemaTask
 
     # export:
     data_obfuscation   = edx.analytics.tasks.export.data_obfuscation:ObfuscatedCourseDumpTask
