--- a/requirements/default.in
+++ b/requirements/default.in
@@ -8,7 +8,7 @@ boto3==1.4.8            # Apache 2.0
 ciso8601==1.0.3         # MIT
 edx-ccx-keys==0.2.1     # AGPL
 edx-opaque-keys==0.4    # AGPL
-elasticsearch==7.8.0    # Apache
+elasticsearch==7.10.1    # Apache
 filechunkio==1.8	# MIT
 google-api-python-client==1.7.7
 graphitesend==0.10.0    # Apache
@@ -26,6 +26,7 @@ python-dateutil==2.6.1 	# BSD
 python-daemon==2.1.2
 python-gnupg==0.3.9	# BSD
 pytz==2017.3		# ZPL
+requests-aws4auth==1.0.1
 requests==2.22.0        # Apache 2.0
 six==1.10.0		# MIT
 stevedore==1.19.1 	# Apache 2.0
