fix: Re-add load_internal_reporting_country.py
This was removed in Vertica deprecation, but is still needed. I'm re-adding it, minus the Vertica bits.

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ edx.analytics.tasks =
 
     # warehouse:
     load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:LoadMysqlTableFromS3ToSnowflakeTask
+    load-internal-reporting-country = edx.analytics.tasks.warehouse.load_internal_reporting_country:LoadInternalReportingCountryTableHive
 
     # export:
     data_obfuscation   = edx.analytics.tasks.export.data_obfuscation:ObfuscatedCourseDumpTask
