docs: Fix `make docs` to actually build.
A re-arrangement of the requirements files resulted in us needing to
install postgres in order to build docs which requires the postgres
binary to be install on the base system.  This is not possible on the
read-the-docs machines so I updated the docs.in file to explicitly
require anything it needs to be able to generate docs.

--- a/requirements/docs.in
+++ b/requirements/docs.in
@@ -1,5 +1,7 @@
 # Requirements for documentation validation
 
--r default.txt
+-c constraints.txt
 
+-e git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi
 Sphinx==1.5.1
+stevedore
