--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
       run: make test.start_elasticsearch
 
     - name: Run Docker test
+      shell: 'script -q -e -c "bash {0}"'
       run: make test-docker
 
     - name: Run Quality Check
